# VeLoPIR

./: CMakeLists.txt  README.md
data/: covid_bb1.csv  covid_bb3.csv  gdacs_data.csv  pir_weather_data_unique.csv  us_coordinate_with_confirmed.csv  us_coordinate_with_confirmed_bb3.csv
include/: utils.h
include/native/: HomBB.h  HomComp.h  HomLocVan.h  HomSup.h
include/optimized/: HomBBOPT.h  HomCompOPT.h  HomLocOPT.h  HomSupOPT.h
src/: utils.cpp
src/native/: HomBB.cpp  HomComp.cpp  HomLocVan.cpp  HomSup.cpp
src/optimized/: HomBBOPT.cpp  HomCompOPT.cpp  HomLocOPT.cpp  HomSupOPT.cpp
test/: CMakeLists.txt
test/correctness/: CMakeLists.txt  testLocOptBB1.cpp  testLocOptBB2.cpp  testLocOptBB3.cpp  testLocVanBB1.cpp  testLocVanBB2.cpp  testLocVanBB3.cpp
test/correctness/partial/: CMakeLists.txt  testBB1.cpp  testBB1opt.cpp  testBB2.cpp  testBB3.cpp  testCompGPU.cpp  testSup.cpp  testSupOPT.cpp
test/example/: CMakeLists.txt  convertTextBin.cpp  decodeData.cpp  encDecDB.cpp  encodeData.cpp  loadData.cpp  testEnc.cpp
test/time/: CMakeLists.txt  timeLocBB1_M.cpp  timeLocBB1_Service.cpp
test/time/application/: CMakeLists.txt  timeCovidKorBB1.cpp  timeCovidKorBB3.cpp  timeCovidUSBB1.cpp  timeCovidUSBB3.cpp  timeGlobalDisBB2.cpp  timeWeatherUSBB3.cpp
test/time/partial/: CMakeLists.txt  timeBB1OPT.cpp  timeBB2OPT.cpp  timeBitwiseAND.cpp  timeCompLEOPT.cpp  timeCompLOPT.cpp  timeEquiOPT.cpp  timeSum.cpp
