add_executable(timeCovidKorBB1 timeCovidKorBB1.cpp)
target_link_libraries(timeCovidKorBB1 locPIR)

add_executable(timeWeatherUSBB3 timeWeatherUSBB3.cpp)
target_link_libraries(timeWeatherUSBB3 locPIR)

add_executable(timeCovidKorBB3 timeCovidKorBB3.cpp)
target_link_libraries(timeCovidKorBB3 locPIR)

add_executable(timeCovidUSBB1 timeCovidUSBB1.cpp)
target_link_libraries(timeCovidUSBB1 locPIR)

add_executable(timeCovidUSBB3 timeCovidUSBB3.cpp)
target_link_libraries(timeCovidUSBB3 locPIR)

add_executable(timeGlobalDisBB2 timeGlobalDisBB2.cpp)
target_link_libraries(timeGlobalDisBB2 locPIR)


